--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   </button>
 </form>
 <div class="ui grid posts">
-  <app-article *ngFor="let article of articles"
+  <app-article *ngFor="let article of sortedArticles()"
   [article]="article">
     
   </app-article>
